allow estimating SD of start ratings

--- a/README.Rmd
+++ b/README.Rmd
@@ -107,6 +107,53 @@ set.seed(1)
 plot_scores(res)
 ```
 
+## Estimating spread of start ratings
+
+Recently, I've put back the possibility to estimate the spread of start ratings. 
+Alongside this option I created a first version of a function for simulating interaction outcomes that actually starts with creating start ratings.
+Incidentally, this function has an argument to set the spread of the start ratings.
+
+So here, let's simulate data with known spread of start ratings and then compare two models, one of which actually estimates the spread (in fact we are talking about the SD of the start ratings) and the other does not.
+
+
+```{r estimate_sds, include=TRUE, echo=TRUE}
+set.seed(123)
+x <- principled_interactions(n_ind = 12, n_int = 100, startspread = 3)
+
+# model 1: estimate with spread
+d1 <- prep_seq(winner = x$idata$winner, loser = x$idata$loser, 
+               Date = x$idata$date, estimate_startspread = TRUE)
+res1 <- elo_seq_bayes(d1, parallel_chains = 4, seed = 27, quiet = TRUE)
+summary1 <- extract_elo_b(res1, targetdate = 0)
+
+# model 2: estimate without spread
+d2 <- prep_seq(winner = x$idata$winner, loser = x$idata$loser,
+               Date = x$idata$date, estimate_startspread = FALSE)
+res2 <- elo_seq_bayes(d2, parallel_chains = 4, seed = 47, quiet = TRUE)
+summary2 <- extract_elo_b(res2, targetdate = 0)
+```
+
+```{r estimate_sds_plot, echo=FALSE, echo=2:20, fig.width=8, fig.height=2.6, out.width="70%"}
+par(mfrow = c(1, 2), family = "serif", mgp = c(1.5, 0.4, 0), tcl = 0.2, mar = c(2.5, 2.5, 1.5, 0.5))
+
+plot(x$startratings[summary1$id], summary1$median, asp = 1,
+     xlab = "true start ratings", ylab = "estimated start ratings")
+abline(0, 1, lty = 2)
+mtext("estimated SD", line = -1)
+
+plot(x$startratings[summary2$id], summary2$median, asp = 1,
+     xlab = "true start ratings", ylab = "estimated start ratings")
+abline(0, 1, lty = 2)
+mtext("fixed SD", line = -1)
+```
+
+
+In both models there a close correlation between true and estimated start ratings. 
+In the model that estimates the start rating SD though, the recovered start values align with the true values fairly well in an absolute sense.
+The model that assumes a fixed SD for the start ratings doesn't recover the true start ratings in an absolute sense.
+So that looks like a good start. 
+TBC.
+
 
 ## Acknowledgments
 
